@@ -16,6 +16,8 @@ Ver.5.5 (in development)
   such as 0000-00-00 00:00:00. So the zeros data handles the same as a blank.
 - [BUG FIX] The field which applied a data converter class in FMS's portal, the converter didn't
   apply to the value in updating the field value.
+- [BUG FIX] In case of the '#' target specification was placed on second or later item in data-im
+  attribute, the field value wasn't shown in the node.
 
 Ver.5.4 (August 24, 2016)
 - You don't have to call INTERMediator.construct() anymore. If you want to do anything before page
